--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "main": "src/index.ts",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-typescript": "8.2.1",
     "@types/glob": "7.1.4",
     "@types/node": "16.3.1",
-    "@types/node-fetch": "2.5.11",
     "@types/node-red": "1.1.1",
     "@typescript-eslint/eslint-plugin": "4.28.3",
     "@typescript-eslint/parser": "4.28.3",
@@ -41,5 +38,9 @@
       "mynode-rollup": "./dist/nodes/mynode-rollup/mynode-rollup.js"
     }
   },
-  "keywords": ["node-red","typescript","rollup"]
+  "keywords": [
+    "node-red",
+    "typescript",
+    "rollup"
+  ]
 }
